--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 astroid==2.3.3
 autopep8==1.4.4
+dj-database-url==0.5.0
 Django==2.2.7
 gunicorn==20.0.2
 honcho==1.0.1
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+psycopg2-binary==2.8.4
 pycodestyle==2.5.0
 pylint==2.4.4
 python-decouple==3.3
