--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  db:
-    image: postgres
+  postgres:
+    image: postgres:latest
     container_name: "postgres_dev"
     environment:
       - POSTGRES_USER=john
@@ -11,3 +11,8 @@ services:
       - "5432:5432"
     volumes:
       - ./volumes/postgres:/var/lib/postgresql/data
+
+  redis_db:
+    image: redis:latest
+    ports:
+      - "6379:6379"
