--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 amqp==2.5.2
+asgiref==3.2.3
 astroid==2.3.3
 autopep8==1.4.4
 billiard==3.6.1.0
@@ -6,7 +7,7 @@ celery==4.3.0
 certifi==2019.11.28
 chardet==3.0.4
 dj-database-url==0.5.0
-Django==2.2.7
+Django==3.0.2
 django-celery-beat==1.5.0
 django-celerybeat-status==0.0.10
 django-timezone-field==3.1
