--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
 apprise==0.9.2
 APScheduler==3.7.0
 asgiref==3.3.4
+astroid==2.5.6
 autopep8==1.5.7
-certifi==2020.12.5
+certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
-click==7.1.2
+click==8.0.1
 cryptography==3.4.7
 dj-database-url==0.5.0
 Django==3.2.4
@@ -15,10 +16,13 @@ django-model-utils==4.1.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
 honcho==1.0.1
-idna==2.10
+idna==3.2
+isort==5.9.1
+lazy-object-proxy==1.6.0
 Markdown==3.3.4
+mccabe==0.6.1
 oauthlib==3.1.0
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.1
 pycodestyle==2.7.0
 pycparser==2.20
 python-decouple==3.4
@@ -30,5 +34,6 @@ six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
 tzlocal==2.1
-urllib3==1.25.9
+urllib3==1.26.6
 whitenoise==5.2.0
+wrapt==1.12.1
