--- a/.github/workflows/docker-release-test.yml
+++ b/.github/workflows/docker-release-test.yml
@@ -25,7 +25,7 @@ jobs:
           # list of Docker images to use as base name for tags
           images: |
             hibare/moni
-=          # generate Docker tags based on the following events/attributes
+          # generate Docker tags based on the following events/attributes
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}
