--- a/.github/workflows/docker-image-publish.yml
+++ b/.github/workflows/docker-image-publish.yml
@@ -9,7 +9,7 @@ on:
       - '*'
 
 jobs:
-  dockerhub-publish:
+  docker-image-publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
