--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -39,6 +39,8 @@ django-model-utils==4.1.1
     # via -r requirements.in
 djangorestframework==3.12.4
     # via -r requirements.in
+gunicorn==20.1.0
+    # via -r requirements.in
 idna==2.10
     # via requests
 markdown==3.3.4
