--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,22 +6,10 @@
 #
 --trusted-host pypi.org
 
-apprise==0.9.3
-    # via -r requirements.in
 apscheduler==3.7.0
     # via django-apscheduler
 asgiref==3.4.1
     # via django
-certifi==2021.5.30
-    # via requests
-cffi==1.14.5
-    # via cryptography
-chardet==4.0.0
-    # via requests
-click==8.0.1
-    # via apprise
-cryptography==3.4.7
-    # via apprise
 dj-database-url==0.5.0
     # via -r requirements.in
 django==3.2.5
@@ -39,45 +27,26 @@ django-model-utils==4.1.1
     # via -r requirements.in
 djangorestframework==3.12.4
     # via -r requirements.in
+drf-writable-nested==0.6.3
+    # via -r requirements.in
 gunicorn==20.1.0
     # via -r requirements.in
-idna==2.10
-    # via requests
 markdown==3.3.4
-    # via
-    #   -r requirements.in
-    #   apprise
-oauthlib==3.1.1
-    # via requests-oauthlib
+    # via -r requirements.in
 psycopg2-binary==2.9.1
     # via -r requirements.in
-pycparser==2.20
-    # via cffi
 python-decouple==3.4
     # via -r requirements.in
 pytz==2021.1
     # via
     #   apscheduler
     #   django
-    #   tzlocal
-pyyaml==5.4.1
-    # via apprise
-requests==2.25.1
-    # via
-    #   apprise
-    #   requests-oauthlib
-requests-oauthlib==1.3.0
-    # via apprise
 six==1.16.0
-    # via
-    #   apprise
-    #   apscheduler
+    # via apscheduler
 sqlparse==0.4.1
     # via django
 tzlocal==2.1
     # via apscheduler
-urllib3==1.26.6
-    # via requests
 whitenoise==5.2.0
     # via -r requirements.in
 
