--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     container_name: adminer
     hostname: adminer
     ports:
-      - "8080:8080"
+      - "8090:8080"
     healthcheck:
       test: "curl -f localhost:8080 || false"
       interval: 30s
@@ -38,13 +38,13 @@ services:
         max-size: "500k"
         max-file: "5"
 
-  moni-api:
-    build:
-      context: .
-    image: moni
-    container_name: moni-api
-    hostname: moni-api
+  gotify:
+    image: gotify/server
+    container_name: gotify
+    hostname: gotify
     ports:
-      - "8000:8000"
-    depends_on: 
-      - postgres
+      - 8080:80
+    environment:
+      - GOTIFY_DEFAULTUSER_PASS=password
+    volumes:
+      - "./volumes/gotify:/app/data"
