--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,6 +41,8 @@ pytz==2021.1
     # via
     #   apscheduler
     #   django
+pyyaml==5.4.1
+    # via -r requirements.in
 six==1.16.0
     # via apscheduler
 sqlparse==0.4.1
