--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ django==3.2.7
     #   django-filter
     #   django-model-utils
     #   djangorestframework
+    #   djangorestframework-simplejwt
 django-apscheduler==0.6.0
     # via -r requirements.in
 django-filter==21.1
@@ -26,6 +27,10 @@ django-filter==21.1
 django-model-utils==4.1.1
     # via -r requirements.in
 djangorestframework==3.12.4
+    # via
+    #   -r requirements.in
+    #   djangorestframework-simplejwt
+djangorestframework-simplejwt==4.8.0
     # via -r requirements.in
 drf-writable-nested==0.6.3
     # via -r requirements.in
@@ -35,6 +40,8 @@ markdown==3.3.4
     # via -r requirements.in
 psycopg2-binary==2.9.1
     # via -r requirements.in
+pyjwt==2.1.0
+    # via djangorestframework-simplejwt
 python-decouple==3.4
     # via -r requirements.in
 pytz==2021.1
