--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ apscheduler==3.8.0
     # via django-apscheduler
 asgiref==3.4.1
     # via django
+beautifulsoup4==4.10.0
+    # via -r requirements.in
 dj-database-url==0.5.0
     # via -r requirements.in
 django==3.2.7
@@ -42,9 +44,9 @@ psycopg2-binary==2.9.1
     # via -r requirements.in
 pyjwt==2.1.0
     # via djangorestframework-simplejwt
-python-decouple==3.4
+python-decouple==3.5
     # via -r requirements.in
-pytz==2021.1
+pytz==2021.3
     # via
     #   apscheduler
     #   django
@@ -52,6 +54,8 @@ pyyaml==5.4.1
     # via -r requirements.in
 six==1.16.0
     # via apscheduler
+soupsieve==2.3
+    # via beautifulsoup4
 sqlparse==0.4.2
     # via django
 tzlocal==2.1
