--- a/.github/workflows/docker-image-test.yml
+++ b/.github/workflows/docker-image-test.yml
@@ -5,12 +5,12 @@ name: Docker build test
 # Only trigger on semver shaped tags.
 on:
   pull_request:
-      # The branches below must be a subset of the branches above
+    # The branches below must be a subset of the branches above
     branches:
-      - 'master'
+      - "master"
     paths-ignore:
-      - '**/README.md'
-      - '**/.github'
+      - "**/README.md"
+      - "**/.github"
 
 jobs:
   docker-build-test:
@@ -61,7 +61,7 @@ jobs:
         with:
           push: false
           builder: ${{ steps.buildx.outputs.name }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
