--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moni",
-  "version": "0.1.0",
+  "version": "0.3.8-alpha",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
