--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -6,8 +6,8 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thank you for submitting an issue. Issue will be reviewed and acted upon soon'
-        pr-message: 'Thank you for submittng PR. PR will be reviewed and merged'
+      - uses: actions/first-interaction@v1
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          issue-message: "Thank you for submitting an issue. Issue will be reviewed and acted upon soon"
+          pr-message: "Thank you for submittng PR. PR will be reviewed and merged"
