--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.22.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-native-notification": "^1.1.1",
     "vue-router": "^3.5.2",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2",
