Fix:  Django Admin: Unable to login #135

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 DEBUG=<VALUE>
 SECRET_KEY=<VALUE>
 ALLOWED_HOSTS=<VALUE>
+CSRF_TRUSTED_ORIGINS=<VALUE>
 DATABASE_URL=<VALUE>
 DJANGO_SU_USERNAME=<VALUE>
 DJANGO_SU_PASSWORD=<VALUE>
