--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,3 @@
-
 version: 2
 updates:
   # Maintain dependencies for GitHub Actions
@@ -6,15 +5,18 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    target-branch: "dev"
 
   # Maintain dependencies for Go mods
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "daily"
+    target-branch: "dev"
 
   # Maintain version for Docker
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
+    target-branch: "dev"
