--- a/.github/workflows/docker-image-test.yml
+++ b/.github/workflows/docker-image-test.yml
@@ -8,6 +8,7 @@ on:
     # The branches below must be a subset of the branches above
     branches:
       - "master"
+      - "dev"
     paths-ignore:
       - "**/README.md"
       - "**/.github"
