Add npm package ecosystem for dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,10 @@ updates:
     schedule:
       interval: "weekly"
     target-branch: "dev"
+
+  # Maintain version for npm or yarn
+  - package-ecosystem: "npm"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    target-branch: "dev"
