--- a/.github/workflows/docker-image-publish-master.yml
+++ b/.github/workflows/docker-image-publish-master.yml
@@ -1,4 +1,4 @@
-name: Docker release
+name: Master Release
 
 # When its time to do a release do a full cross platform build for all supported
 # architectures and push all of them to Docker Hub & Github container registry.
