Add job env vars

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,6 @@ CSRF_TRUSTED_ORIGINS=<VALUE>
 DATABASE_URL=<VALUE>
 DJANGO_SU_USERNAME=<VALUE>
 DJANGO_SU_PASSWORD=<VALUE>
+SCHEDULER_MISFIRE_GRACETIME=<VALUE>
+SCHEDULER_JOB_MAX_INSTANCES=<VALUE>
+SCHEDULER_JOB_REPLACE_EXISTING=<VALUE>
