--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,28 @@
 {
-  "name": "moni",
-  "version": "0.7.0",
+  "name": "frontendv2",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.22.0",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-native-notification": "^1.1.1",
-    "vue-router": "^3.5.2",
-    "vuetify": "^2.6.13",
-    "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "@quasar/extras": "^1.15.9",
+    "axios": "^1.2.1",
+    "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.0.2",
+    "quasar": "^2.11.3",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@mdi/font": "^7.0.96",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.19",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.2",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@quasar/vite-plugin": "^1.3.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.32.12",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0",
+    "vue-tsc": "^1.0.11"
+  }
 }
