--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,4 +9,4 @@ repos:
       entry: bash -c 'docker run --rm -v "$(pwd):/workdir" -i --rm trufflesecurity/trufflehog:latest git file:///workdir --since-commit HEAD --only-verified --fail'
       language: system
       stages: ["commit", "push"]
-      exclude: (data/|.*/node_modules/|.*venv/)
+      exclude: (data/|.*/node_modules/|.*/.*venv/|.*/dist/|.*/frontendv1/)
