--- a/.github/workflows/docker-image-publish-nightly.yml
+++ b/.github/workflows/docker-image-publish-nightly.yml
@@ -1,11 +1,12 @@
-name: "Nightly Build"
+name: "Dev Build"
 
 # When its time to do a release do a full cross platform build for all supported
 # architectures and push all of them to Docker Hub & Github container registry.
 # Only trigger on semver shaped tags.
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  push:
+    branches:
+      - dev
 
 jobs:
   docker-image-publish:
@@ -24,7 +25,7 @@ jobs:
             ghcr.io/hibare/moni
           # generate Docker tags based on the following events/attributes
           tags: |
-            nightly
+            dev
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
