Env vars for purge age

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DJANGO_SU_PASSWORD=<VALUE>
 SCHEDULER_MISFIRE_GRACETIME=<VALUE>
 SCHEDULER_JOB_MAX_INSTANCES=<VALUE>
 SCHEDULER_JOB_REPLACE_EXISTING=<VALUE>
+JOB_HISTORY_PURGE_AGE=<VALUE>
+NOTIFIER_HISTORY_PURGE_AGE=<VALUE>
