--- a/.github/workflows/docker-image-publish-nightly.yml
+++ b/.github/workflows/docker-image-publish-nightly.yml
@@ -1,12 +1,11 @@
-name: "Dev Build"
+name: "Nightly Build"
 
 # When its time to do a release do a full cross platform build for all supported
 # architectures and push all of them to Docker Hub & Github container registry.
 # Only trigger on semver shaped tags.
 on:
-  push:
-    branches:
-      - dev
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   docker-image-publish:
@@ -14,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: dev
 
       - name: Docker meta
         id: meta
