--- a/.github/workflows/pr-creator.yml
+++ b/.github/workflows/pr-creator.yml
@@ -18,7 +18,7 @@ jobs:
         DEFAULT_BRANCH=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/branches/default" | jq -r .name)
 
         # Create a PR from "dev" to the default branch
-        PR_URL=$(gh pr create --base master --head "dev" --title "Auto-generated PR" -t "Auto-generated PR" -b "Auto-generated PR")
+        PR_URL=$(gh pr create --base "$DEFAULT_BRANCH" --head "dev" --title "Auto-generated PR" -t "Auto-generated PR" -b "Auto-generated PR")
 
         echo "Created PR: $PR_URL"
       env:
