--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
       interval: "weekly"
       day: "friday"
       time: "00:30"
-    target-branch: "dev"
+    target-branch: "main"
     assignees:
       - "hibare"
     groups:
@@ -22,7 +22,7 @@ updates:
       interval: "weekly"
       day: "friday"
       time: "00:30"
-    target-branch: "dev"
+    target-branch: "main"
     assignees:
       - "hibare"
     groups:
@@ -37,7 +37,7 @@ updates:
       interval: "weekly"
       day: "friday"
       time: "00:30"
-    target-branch: "dev"
+    target-branch: "main"
     assignees:
       - "hibare"
     groups:
@@ -52,7 +52,7 @@ updates:
       interval: "weekly"
       day: "friday"
       time: "00:30"
-    target-branch: "dev"
+    target-branch: "main"
     assignees:
       - "hibare"
     groups:
