--- a/Dockerfile.dev.api
+++ b/Dockerfile.dev.api
@@ -2,9 +2,9 @@ FROM python:3.13.0 as base
 
 LABEL Github="hibare"
 
-ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONDONTWRITEBYTECODE=1
 
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONUNBUFFERED=1
 
 RUN apt-get update && apt-get install -y build-essential python3-dev libpq-dev libssl-dev libffi-dev rustc
 
