feat(jobs): Use custom UA for job requests

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SCHEDULER_JOB_MAX_INSTANCES=<VALUE>
 SCHEDULER_JOB_REPLACE_EXISTING=<VALUE>
 JOB_HISTORY_PURGE_AGE=<VALUE>
 NOTIFIER_HISTORY_PURGE_AGE=<VALUE>
+MONI_USER_AGENT=<VALUE>
