--- a/Dockerfile.dev.api
+++ b/Dockerfile.dev.api
@@ -1,13 +1,24 @@
-FROM python:3.13.3 as base
-
-LABEL Github="hibare"
+FROM python:3.13.3 AS base
 
 ENV PYTHONDONTWRITEBYTECODE=1
 
 ENV PYTHONUNBUFFERED=1
 
-RUN apt-get update && apt-get install -y build-essential python3-dev libpq-dev libssl-dev libffi-dev rustc
+# hadolint ignore=DL3008
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential \
+    python3-dev \
+    libpq-dev \
+    libssl-dev \
+    libffi-dev \
+    rustc \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
 
 COPY backend/requirements.txt .
 
-RUN pip install -U pip setuptools wheel && pip install -r requirements.txt 
+# hadolint ignore=DL3013,DL3042
+RUN pip install -U pip setuptools wheel \
+    && pip install -r requirements.txt
