--- a/.github/workflows/test-build-release.yml
+++ b/.github/workflows/test-build-release.yml
@@ -35,6 +35,7 @@ jobs:
 
   docker-image-build-publish:
     runs-on: ubuntu-latest
+    needs: run-tests
     permissions:
       contents: write
       id-token: write # For cosign
