--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pytz==2023.3",
     "pytz-deprecation-shim==0.1.0.post0",
     "pyyaml==6.0.2",
+    "requests>=2.32.3",
     "six==1.16.0",
     "soupsieve==2.4.1",
     "sqlparse==0.5.0",
