--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,26 @@ repos:
     rev: 22.10.0
     hooks:
       - id: black
+        name: Black
+        description: The uncompromising Python code formatter
+        language_version: python3
+        types: [python]
+        args:
+          - --line-length=130
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        name: isort
+        description: A Python utility for sorting imports
+        language_version: python3
+        types: [python]
+        args:
+          - --profile=black
+          - --line-length=130
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.0.0
+    hooks:
+      - id: flake8
+        args:
+          - --max-line-length=130
