--- a/.github/workflows/test-build-release.yml
+++ b/.github/workflows/test-build-release.yml
@@ -41,6 +41,9 @@ jobs:
       id-token: write # For cosign
       packages: write # For GHCR
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
       - name: Set Metadata
         id: set-metadata
         run: |
